# bloom

./: AGENT.md  Cargo.toml  README.md
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  download.rs  error.rs  lib.rs  telemetry.rs  versions.rs
crates/jvm/: Cargo.toml
crates/jvm/src/: lib.rs
