[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
# http client
reqwest = { version = "0.12", default-features = false, features = [
	"brotli",
	"gzip",
	"json",
	"rustls-tls",
] }
# serialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# async runtime
futures = "0.3"
tokio = { version = "1", features = [
	"fs",
	"io-util",
	"macros",
	"rt-multi-thread",
] }

# error
snafu = "0.8"

# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# misc
color-eyre = "0.6"
directories = "6.0"
hex = "0.4"
sha1 = "0.10"
url = "2.5"
