[package]
edition = "2024"
name = "bloom-core"
publish = false
version = "0.1.0"

[lib]
name = "bloom_core"
path = "src/lib.rs"

[dependencies]
color-eyre.workspace = true
directories.workspace = true
futures.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
